# splent_feature_mail

./: MANIFEST.in  pyproject.toml
docker/: .env.dev.example  docker-compose.dev.yml
src/splent_feature_mail/: routes.py  services.py
src/splent_feature_mail/tests/: locustfile.py
src/splent_io/splent_feature_mail/: __init__.py  commands.py  config.py  forms.py  hooks.py  models.py  repositories.py  routes.py  seeders.py  services.py  signals.py
src/splent_io/splent_feature_mail/assets/js/: scripts.js  webpack.config.js
src/splent_io/splent_feature_mail/migrations/: env.py
src/splent_io/splent_feature_mail/templates/mail/: index.html
src/splent_io/splent_feature_mail/tests/: test_unit.py
src/splent_io/splent_feature_mail/tests/e2e/: test_browser.py
src/splent_io/splent_feature_mail/tests/functional/: test_routes.py
src/splent_io/splent_feature_mail/tests/integration/: test_repositories.py
src/splent_io/splent_feature_mail/tests/load/: locustfile.py
src/splent_io/splent_feature_mail/tests/unit/: test_services.py
