[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_mail"
version = "1.1.0"
requires-python = ">=3.13"
authors = [{ name = "DiversoLab", email = "diversolab@us.es" }]
dependencies = [

]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.splent.contract]
description = "Mail feature: provides MailService for transactional email sending"

[tool.splent.contract.provides]
routes = ["/mail"]
blueprints = ["mail_bp"]
models = []
commands = []

[tool.splent.contract.requires]
features = []
env_vars = ["MAIL_SERVER", "MAIL_PORT", "MAIL_USERNAME", "MAIL_PASSWORD", "MAIL_DEFAULT_SENDER"]
