[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_mail"
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*"]

[tool.splent]
cli_version = "1.3.0"

[tool.splent.contract]
description = "Email sending via Flask-Mail with SMTP configuration"

[tool.splent.contract.provides]
routes     = []
blueprints = ["mail_bp"]
models     = []
commands   = []
hooks      = []
services   = ["MailService"]
signals    = ["email-sent"]
translations = []
docker     = []

[tool.splent.contract.requires]
features = []
env_vars = ["MAIL_SERVER", "MAIL_PORT"]
signals  = []

[tool.splent.contract.extensible]
services  = ["MailService"]
templates = []
models    = []
hooks     = []
routes    = false
